<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Continents</string>
    <string name="title_activity_detail">Details</string>

    <string name="content_authority">com.innazis.continents.continents</string>

    <string name="region_label">Region</string>
    <string name="subregion_label">Subregion</string>
    <string name="population_label">Population</string>
    <string name="area_label">Area</string>
    <string name="currency_label">Currencies</string>
    <string name="language_label">Languages</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
</resources>
