<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/extra_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/detail_accent_pane_background"
        android:paddingBottom="@dimen/countries_detail_vertical_padding"
        android:paddingEnd="@dimen/countries_detail_horizontal_padding"
        android:paddingLeft="@dimen/countries_detail_horizontal_padding"
        android:paddingRight="@dimen/countries_detail_horizontal_padding"
        android:paddingStart="@dimen/countries_detail_horizontal_padding"
        android:paddingTop="@dimen/countries_detail_vertical_padding">

        <!-- left right half divider -->
        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <!-- Region label -->
        <TextView
            android:id="@+id/region_label"
            style="@style/DetailLabel"
            android:text="@string/region_label"
            app:layout_constraintBottom_toTopOf="@+id/subregion_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toTopOf="@+id/extra_details"
            app:layout_constraintVertical_bias="0.072" />

        <!-- Region -->
        <TextView
            android:id="@+id/extra_details_region_tv"
            style="@style/ExtraLabel"
            app:layout_constraintBottom_toBottomOf="@+id/region_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Region"/>

        <!-- Subregion label -->
        <TextView
            android:id="@+id/subregion_label"
            style="@style/DetailLabel"
            android:text="@string/subregion_label"
            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toTopOf="@+id/extra_details"
            app:layout_constraintVertical_bias="0.112" />

        <!-- Subregion -->
        <TextView
            android:id="@+id/extra_details_subregion_tv"
            style="@style/ExtraLabel"
            app:layout_constraintBottom_toBottomOf="@+id/subregion_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Subregion"/>

        <!-- Population label -->
        <TextView
            android:id="@+id/population_label"
            style="@style/DetailLabel"
            android:text="@string/population_label"
            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/subregion_label"
            app:layout_constraintVertical_bias="0.07" />

        <!-- Population -->
        <TextView
            android:id="@+id/extra_details_population_tv"
            style="@style/ExtraLabel"
            app:layout_constraintBottom_toBottomOf="@+id/population_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Population"/>

        <!-- Area label -->
        <TextView
            android:id="@+id/area_label"
            style="@style/DetailLabel"
            android:text="@string/area_label"
            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/population_label"
            app:layout_constraintVertical_bias="0.15" />

        <!-- Area -->
        <TextView
            android:id="@+id/extra_details_area_tv"
            style="@style/ExtraLabel"
            app:layout_constraintBottom_toBottomOf="@+id/area_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Area"/>

        <!-- Currency label -->
        <TextView
            android:id="@+id/currency_label"
            style="@style/DetailLabel"
            android:text="@string/currency_label"
            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/area_label"
            app:layout_constraintVertical_bias="0.246" />

        <!-- Currency -->
        <TextView
            android:id="@+id/extra_details_currency_tv"
            style="@style/ExtraLabel"
            android:maxLines="3"
            android:minLines="1"
            app:layout_constraintTop_toTopOf="@+id/currency_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Area"/>

        <!-- Language label -->
        <TextView
            android:id="@+id/language_label"
            style="@style/DetailLabel"
            android:text="@string/language_label"
            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/currency_label"
            app:layout_constraintVertical_bias="0.443" />

        <!-- Language -->
        <TextView
            android:id="@+id/extra_details_language_tv"
            style="@style/ExtraLabel"
            android:maxLines="3"
            android:minLines="1"
            app:layout_constraintTop_toTopOf="@+id/language_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Language"/>


</android.support.constraint.ConstraintLayout>